--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-pager-view": "6.2.0",
     "react-native-tab-view": "^3.5.2"
   },
