--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react-native-dotenv": "^3.4.9",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-pager-view": "6.2.0",
+    "react-native-svg": "13.9.0",
+    "react-native-svg-transformer": "^1.3.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-svg": "13.9.0"
+    "expo-location": "~16.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
