--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-svg-transformer": "^1.3.0",
     "react-native-tab-view": "^3.5.2",
     "expo-location": "~16.1.0",
-    "expo-linear-gradient": "~12.3.0"
+    "expo-linear-gradient": "~12.3.0",
+    "@shopify/react-native-skia": "0.1.196"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
