--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@shopify/react-native-skia": "0.1.196",
     "axios": "^1.6.5",
     "expo": "~49.0.15",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
+    "quickqr": "^1.0.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-dotenv": "^3.4.9",
@@ -19,10 +23,7 @@
     "react-native-pager-view": "6.2.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.3.0",
-    "react-native-tab-view": "^3.5.2",
-    "expo-location": "~16.1.0",
-    "expo-linear-gradient": "~12.3.0",
-    "@shopify/react-native-skia": "0.1.196"
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
