--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-pager-view": "6.2.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.3.0",
-    "react-native-tab-view": "^3.5.2"
+    "react-native-tab-view": "^3.5.2",
+    "expo-file-system": "~15.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
