--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@shopify/react-native-skia": "0.1.196",
     "axios": "^1.6.5",
     "expo": "~49.0.15",
+    "expo-file-system": "~15.4.5",
     "expo-linear-gradient": "~12.3.0",
     "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
@@ -23,8 +24,7 @@
     "react-native-pager-view": "6.2.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.3.0",
-    "react-native-tab-view": "^3.5.2",
-    "expo-file-system": "~15.4.5"
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
