--- a/eas.json
+++ b/eas.json
@@ -3,8 +3,16 @@
     "preview": {
       "android": {
         "buildType": "apk"
+      },
+      "env":{
+        "API_KEY": "replace from .env file",
+        "MET_API":"replace from .env file"
       }
     },
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal"
+        },
     "preview2": {
       "android": {
         "gradleCommand": ":app:assembleRelease"
