--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@shopify/react-native-skia": "0.1.196",
     "axios": "^1.6.5",
     "expo": "~49.0.15",
@@ -24,7 +25,8 @@
     "react-native-pager-view": "6.2.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.3.0",
-    "react-native-tab-view": "^3.5.2"
+    "react-native-tab-view": "^3.5.2",
+    "expo-dev-client": "~2.4.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
