--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.3.0",
     "react-native-tab-view": "^3.5.2",
-    "expo-dev-client": "~2.4.12"
+    "expo-dev-client": "~2.4.12",
+    "react-native-maps": "1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
