--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-svg-transformer": "^1.3.0",
     "react-native-tab-view": "^3.5.2",
     "expo-dev-client": "~2.4.13",
-    "react-native-maps": "1.7.1"
+    "react-native-maps": "1.7.1",
+    "expo-network": "~5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
