--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
     "@shopify/react-native-skia": "0.1.196",
     "axios": "^1.6.5",
     "expo": "~49.0.15",
+    "expo-dev-client": "~2.4.13",
     "expo-file-system": "~15.4.5",
     "expo-linear-gradient": "~12.3.0",
     "expo-location": "~16.1.0",
+    "expo-network": "~5.4.0",
     "expo-status-bar": "~1.6.0",
     "quickqr": "^1.0.1",
     "react": "18.2.0",
     "react-native": "0.72.10",
     "react-native-dotenv": "^3.4.9",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "1.7.1",
     "react-native-pager-view": "6.2.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.3.0",
-    "react-native-tab-view": "^3.5.2",
-    "expo-dev-client": "~2.4.13",
-    "react-native-maps": "1.7.1",
-    "expo-network": "~5.4.0"
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
