--- a/package.json
+++ b/package.json
@@ -9,29 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@shopify/react-native-skia": "0.1.196",
-    "axios": "^1.6.5",
-    "expo": "~49.0.15",
-    "expo-dev-client": "~2.4.13",
-    "expo-file-system": "~15.4.5",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-location": "~16.1.0",
-    "expo-network": "~5.4.0",
-    "expo-status-bar": "~1.6.0",
+    "@expo/vector-icons": "^14.0.3",
+    "axios": "^1.7.7",
+    "expo": "^51.0.38",
+    "expo-asset": "~10.0.10",
+    "expo-dev-client": "~4.0.28",
+    "expo-file-system": "~17.0.1",
+    "expo-image": "~1.13.0",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-location": "~17.0.1",
+    "expo-network": "~6.0.1",
+    "expo-status-bar": "~1.12.1",
     "quickqr": "^1.0.1",
     "react": "18.2.0",
-    "react-native": "0.72.10",
+    "react-native": "0.74.5",
     "react-native-dotenv": "^3.4.9",
     "react-native-google-places-autocomplete": "^2.5.6",
-    "react-native-maps": "1.7.1",
-    "react-native-pager-view": "6.2.0",
-    "react-native-svg": "13.9.0",
-    "react-native-svg-transformer": "^1.3.0",
+    "react-native-maps": "1.14.0",
+    "react-native-pager-view": "6.3.0",
     "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
